--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(roguelike)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(roguelike main.cpp src/Game.cpp src/Game.h src/core/Renderer.cpp src/core/Renderer.h src/core/GameEngine.cpp src/core/GameEngine.h src/core/InputHandler.cpp src/core/InputHandler.h src/core/Timer.cpp src/core/Timer.h src/core/AssetManager.h src/core/TextureManager.cpp src/core/TextureManager.h src/core/Texture.cpp src/core/Texture.h)
+add_executable(roguelike main.cpp src/Game.cpp src/Game.h src/core/Renderer.cpp src/core/Renderer.h src/core/GameEngine.cpp src/core/GameEngine.h src/core/InputHandler.cpp src/core/InputHandler.h src/core/Timer.cpp src/core/Timer.h src/core/AssetManager.h src/core/TextureManager.cpp src/core/TextureManager.h src/core/Texture.cpp src/core/Texture.h src/core/Rect.h)
 
 include_directories("/usr/include")
 target_link_libraries(roguelike "/usr/lib/libSDL2.so" "/usr/lib/libSDL2_image.so")
